--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,5 @@ Description: S3 functions for management, analysis, interpolation and plot of hy
 License: GPL (>=2)
 Depends: R (>= 2.10.0), zoo, gstat, automap
 Suggests: sp, maptools, e1071, rgdal, lattice
-URL: http://cran.r-project.org/web/packages/hydroTSM/
+URL: http://cran.r-project.org/web/packages/hydroTSM/, http://www.rforge.net/hydroTSM/
 LazyLoad: yes
