--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Mauricio Zambrano-Bigiarini
 Maintainer: Mauricio Zambrano-Bigiarini <mauricio.zambrano@ing.unitn.it>
 Description: S3 functions for management, analysis, interpolation and plot of hydrological time series, mainly oriented to hydrological modelling tasks. So far, it only works with daily / monthly / seasonal / annual time series. The focus of this package has been put in providing a collection of tools useful for the daily work of hydrologists (although an effort was made to optimize each function as much as possible, functionality has had priority over speed). Bugs / comments / questions / collaboration of any kind are very welcomed, and in particular, datasets that can be included in this package for academic purposes.
 License: GPL (>=2)
-Depends: R (>= 2.10.0), xts (>= 0.8-1), zoo (>= 1.7-0)
+Depends: R (>= 2.10.0), zoo (>= 1.7-0), xts (>= 0.8-1)
 Imports: gstat, automap, sp, maptools, e1071
 Suggests: rgdal, lattice
 URL: http://www.rforge.net/hydroTSM/, http://cran.r-project.org/web/packages/hydroTSM/
