new annualfunction.zoo and updated .Rd file. Updated DESCRIPTION, NAMESPACE and NEWS file. Error checking for -Inf in daily2monthly.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ exportPattern("^[^\\.]")
 S3method(monthlyfunction, zoo)
 S3method(dm2seasonal, zoo)
 S3method(seasonalfunction, zoo)
+S3method(annualfunction, zoo)
 
 
