improved 'dwi.zoo' (by using 'aggregate') and new 'extractzoo.zoo'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,7 @@ S3method(seasonalfunction, zoo)
 S3method(annualfunction, zoo)
 S3method(daily2monthly, zoo)
 S3method(daily2annual, zoo)
+S3method(dwi, zoo)
+S3method(extractzoo, zoo)
 
 
