--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,6 @@ S3method(annualfunction, zoo)
 S3method(daily2monthly, zoo)
 S3method(daily2annual, zoo)
 S3method(dwi, zoo)
-S3method(extractzoo, zoo)
+S3method(extract, zoo)
 
 
