'hydroplot': new argument 'season.names', to customise the names of the weather seasons used for plotting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,4 @@
+importFrom("zoo", is.zoo, as.Date)
 importFrom("e1071", skewness, kurtosis)
 #importFrom("maptools", readShapePoly)
 importFrom("gstat", krige, idw)
