'time2season': now it handles POSIXct and POSIXt values. 'dm2seasonal': now it handles sub-daily and weekly values and improved exmples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
-importFrom("zoo", is.zoo, as.Date, aggregate, zoo)
+importFrom("zoo", is.zoo, as.Date, zoo)
+#importFrom("zoo", aggregate) # aggregate is not exported from zoo
 importFrom("e1071", skewness, kurtosis)
 #importFrom("maptools", readShapePoly)
 importFrom("gstat", krige, idw)
