--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: hydroTSM
 Type: Package
 Title: Time series management, analysis and interpolation for hydrological modelling
-Version: 0.4-2-4
-Date: 2015-01-22
+Version: 0.4-2-5
+Date: 2015-02-02
 Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email = "mzb.devel@gmail.com", role=c("aut", "cre", "cph") ) )
 Maintainer: Mauricio Zambrano-Bigiarini <mzb.devel@gmail.com>
 Description: S3 functions for management, analysis, interpolation and plotting of time series used in hydrology and related environmental sciences. In particular, this package is highly oriented to hydrological modelling tasks. The focus of this package has been put in providing a collection of tools useful for the daily work of hydrologists (although an effort was made to optimise each function as much as possible, functionality has had priority over speed). Bugs / comments / questions / collaboration of any kind are very welcomed, and in particular, datasets that can be included in this package for academic purposes.
@@ -10,7 +10,7 @@ License: GPL (>=2)
 Depends: R (>= 2.10.0), zoo (>= 1.7-2), xts (>= 0.8-2)
 Imports: e1071, gstat, automap, sp
 Suggests: rgdal, maptools, lattice
-URL: http://www.rforge.net/hydroTSM/, http://cran.r-project.org/web/packages/hydroTSM/
+URL: http://www.rforge.net/hydroTSM/
 MailingList: https://stat.ethz.ch/mailman/listinfo/r-sig-ecology
 BugReports: https://www.rforge.net/bugzilla/describecomponents.cgi?product=hydroTSM
 Keywords: hydrology, hydrological modelling, hydrologic modeling, time series
