--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: hydroTSM
 Type: Package
 Title: Time series management, analysis and interpolation for hydrological modelling
-Version: 0.5-0
+Version: 0.4-2-11
 Author: Mauricio Zambrano-Bigiarini [aut, cre, cph]
 Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email = "mzb.devel@gmail.com", role=c("aut", "cre", "cph") ) )
 Maintainer: Mauricio Zambrano-Bigiarini <mzb.devel@gmail.com>
