--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,4 +21,59 @@ S3method(smry, zoo)
 S3method(fdc, zoo)
 S3method(subdaily2daily, zoo)
 
+S3method(annualfunction, data.frame)
+S3method(annualfunction, default)
+S3method(annualfunction, matrix)
+S3method(daily2annual, data.frame)
+S3method(daily2annual, default)
+S3method(daily2annual, matrix) 
+S3method(daily2monthly, data.frame) 
+S3method(daily2monthly, default)
+S3method(daily2monthly, matrix) 
+S3method(dm2seasonal, data.frame) 
+S3method(dm2seasonal, default)
+S3method(dm2seasonal, matrix) 
+S3method(dwdays, data.frame) 
+S3method(dwdays, default) 
+S3method(dwdays, matrix)
+S3method(dwi, data.frame) 
+S3method(dwi, default) 
+S3method(dwi, matrix) 
+S3method(extract, default)
+S3method(fdc, data.frame)
+S3method(fdc, default) 
+S3method(fdc, matrix) 
+S3method(fdcu, data.frame) 
+S3method(fdcu, default) 
+S3method(fdcu, matrix)
+S3method(hydrokrige, data.frame) 
+S3method(hydrokrige, default) 
+S3method(infillxy, data.frame)
+S3method(infillxy, default) 
+S3method(infillxy, matrix) 
+S3method(istdx, data.frame) 
+S3method(istdx, default)
+S3method(istdx, matrix)
+S3method(izoo2rzoo, default) 
+S3method(izoo2rzoo, zoo) 
+S3method(ma, default) 
+S3method(ma, zoo)
+S3method(monthlyfunction, data.frame)
+S3method(monthlyfunction, default)
+S3method(monthlyfunction, matrix) 
+S3method(seasonalfunction, data.frame)
+S3method(seasonalfunction, default) 
+S3method(seasonalfunction, matrix) 
+S3method(smry, Date)
+S3method(smry, data.frame) 
+S3method(smry, default) 
+S3method(smry, matrix) 
+S3method(stdx, data.frame) 
+S3method(stdx, default)
+S3method(stdx, matrix) 
+S3method(subdaily2daily, data.frame)
+S3method(subdaily2daily, default)
+S3method(subdaily2daily, matrix)
+
+
 
