--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: hydroTSM
 Type: Package
 Title: Time Series Management, Analysis and Interpolation for Hydrological Modelling
-Version: 0.4-2-15
+Version: 0.4-3
 Author: Mauricio Zambrano-Bigiarini [aut, cre, cph]
 Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email = "mzb.devel@gmail.com", role=c("aut", "cre", "cph") ) )
 Maintainer: Mauricio Zambrano-Bigiarini <mzb.devel@gmail.com>
