--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,9 @@
+importFrom("stats", time, cor, cor.test, symnum, plot.stepfun, ecdf, median, splinefun, integrate, filter, IQR, sd, start, end, window, aggregate)
+importFrom("graphics", boxplot, plot, hist, par, layout, axis, Axis, abline, lines, points, legend, box, text, strwidth, rect, polygon, pairs, panel.smooth)
+importFrom("grDevices", xy.coords, palette, colorRampPalette, dev.set, dev.list, dev.new) 
+importFrom("utils", write.table, write.csv, write.csv2) 
+importFrom("methods", as, hasArg) 
+
 importFrom("zoo", is.zoo, as.Date, as.zoo, zoo, coredata, as.yearmon, rollapply, index, "time<-")
 importFrom("xts", is.xts, as.xts, to.period, axTicksByTime, apply.daily, periodicity, xts, .index, plot.xts)
 #importFrom("zoo", aggregate) # aggregate is not exported from zoo
