--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ importFrom("graphics", boxplot, plot, hist, par, layout, axis, Axis, abline, lin
 importFrom("grDevices", xy.coords, palette, colorRampPalette, dev.set, dev.list, dev.new) 
 importFrom("utils", write.table, write.csv, write.csv2) 
 importFrom("methods", as, hasArg) 
-importFrom("graphics", barplot, grid) 
+importFrom("graphics", barplot, grid, axTicks) 
 
 importFrom("zoo", is.zoo, as.Date, as.zoo, zoo, coredata, as.yearmon, rollapply, index, "time<-")
 importFrom("xts", is.xts, as.xts, to.period, axTicksByTime, apply.daily, periodicity, xts, .index, plot.xts)
