--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ S3method(extract, zoo)
 S3method(smry, zoo)
 S3method(fdc, zoo)
 S3method(subdaily2daily, zoo)
+S3method(hydroplot, zoo)
+S3method(hydroplot, data.frame)
 
 S3method(annualfunction, data.frame)
 S3method(annualfunction, default)
