exported defualt method for 'sname2plot' and 'hydroplot'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,8 +27,10 @@ S3method(extract, zoo)
 S3method(smry, zoo)
 S3method(fdc, zoo)
 S3method(subdaily2daily, zoo)
+S3method(hydroplot, default)
 S3method(hydroplot, zoo)
 S3method(hydroplot, data.frame)
+S3method(sname2plot, default)
 S3method(sname2plot, zoo)
 S3method(sname2plot, data.frame)
 
