--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ S3method(extract, zoo)
 S3method(smry, zoo)
 S3method(fdc, zoo)
 S3method(subdaily2daily, zoo)
+S3method(subhourly2hourly, zoo)
 S3method(hydroplot, default)
 S3method(hydroplot, zoo)
 S3method(hydroplot, data.frame)
@@ -87,6 +88,9 @@ S3method(stdx, matrix)
 S3method(subdaily2daily, data.frame)
 S3method(subdaily2daily, default)
 S3method(subdaily2daily, matrix)
+S3method(subhourly2hourly, data.frame)
+S3method(subhourly2hourly, default)
+S3method(subhourly2hourly, matrix)
 
 
 
