--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: hydroTSM
 Type: Package
 Title: Time Series Management, Analysis and Interpolation for Hydrological Modelling
-Version: 0.6-4
+Version: 0.6-5
 Authors@R: c( person("Mauricio Zambrano-Bigiarini", email = "mzb.devel@gmail.com", role=c("aut", "cre", "cph"), comment=c(ORCID = "0000-0002-9536-643X")) )
 Maintainer: Mauricio Zambrano-Bigiarini <mzb.devel@gmail.com>
 Description: S3 functions for management, analysis, interpolation and plotting of time series used in hydrology and related environmental sciences. In particular, this package is highly oriented to hydrological modelling tasks. The focus of this package has been put in providing a collection of tools useful for the daily work of hydrologists (although an effort was made to optimise each function as much as possible, functionality has had priority over speed). Bugs / comments / questions / collaboration of any kind are very welcomed, and in particular, datasets that can be included in this package for academic purposes.
 License: GPL (>=2)
 Depends: R (>= 2.10.0), zoo (>= 1.7-2), xts (>= 0.9-7)
-Imports: e1071, gstat, automap, sp (>= 1.1-0), lattice, maptools, stats, utils, methods, graphics, grDevices 
+Imports: e1071, gstat, automap, sp (>= 1.1-0), lattice, maptools, stats, utils, methods, graphics, grDevices, chron
 Suggests: rmarkdown
 VignetteBuilder: rmarkdown
 URL: https://github.com/hzambran/hydroTSM
@@ -16,4 +16,4 @@ BugReports: https://github.com/hzambran/hydroTSM/issues
 LazyLoad: yes
 NeedsCompilation: no
 Repository: CRAN
-Packaged: Mon 23 May 08:01:48 -04 2022; hzambran
+Packaged: Wed 25 May 2022 03:46:40 PM -04; hzambran
