new function: subdaily2nminutes'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,11 +86,17 @@ S3method(smry, matrix)
 S3method(stdx, data.frame) 
 S3method(stdx, default)
 S3method(stdx, matrix) 
-S3method(subdaily2daily, data.frame)
 S3method(subdaily2daily, default)
+S3method(subdaily2daily, zoo)
+S3method(subdaily2daily, data.frame)
 S3method(subdaily2daily, matrix)
-S3method(subhourly2hourly, data.frame)
 S3method(subhourly2hourly, default)
+S3method(subhourly2hourly, zoo)
+S3method(subhourly2hourly, data.frame)
 S3method(subhourly2hourly, matrix)
+S3method(subhourly2nminutes, default)
+S3method(subhourly2nminutes, zoo)
+S3method(subhourly2nminutes, data.frame)
+S3method(subhourly2nminutes, matrix)
 S3method(hypsometric, SpatialGridDataFrame)
 
