--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ importFrom("gstat", krige, idw)
 importFrom("automap", autoKrige)
 importFrom("lattice", levelplot)
 importFrom("sp", proj4string, coordinates, "coordinates<-", "proj4string<-", spplot, CRS, spsample, "gridded<-", SpatialPoints, layout.north.arrow, layout.scale.bar, over)
-importFrom("chron", month.day.year)
+#importFrom("chron", month.day.year)
 exportPattern("^[^\\.]")
 
 S3method(monthlyfunction, zoo)
