'subdaily2monthly' added as S3 method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,10 @@ S3method(subdaily2daily, default)
 S3method(subdaily2daily, zoo)
 S3method(subdaily2daily, data.frame)
 S3method(subdaily2daily, matrix)
+S3method(subdaily2monthly, default)
+S3method(subdaily2monthly, zoo)
+S3method(subdaily2monthly, data.frame)
+S3method(subdaily2monthly, matrix)
 S3method(subhourly2hourly, default)
 S3method(subhourly2hourly, zoo)
 S3method(subhourly2hourly, data.frame)
