hydrokrige.default, hydrokrige.data.frame removed from NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,8 +63,8 @@ S3method(fdc, matrix)
 S3method(fdcu, data.frame) 
 S3method(fdcu, default) 
 S3method(fdcu, matrix)
-S3method(hydrokrige, data.frame) 
-S3method(hydrokrige, default) 
+#S3method(hydrokrige, data.frame) 
+#S3method(hydrokrige, default) 
 S3method(infillxy, data.frame)
 S3method(infillxy, default) 
 S3method(infillxy, matrix) 
