fdcu.zoo removed (no time for continuing in this point , by now)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,7 @@ S3method(dm2seasonal, zoo)
 S3method(dm2seasonal, data.frame) 
 S3method(dm2seasonal, matrix) 
 S3method(dwdays, default) 
-S3method(dwdays, zoo) 
+#S3method(dwdays, zoo) 
 S3method(dwdays, data.frame) 
 S3method(dwdays, matrix)
 S3method(dwi, default)  
@@ -54,7 +54,7 @@ S3method(fdc, zoo)
 S3method(fdc, data.frame)
 S3method(fdc, matrix) 
 S3method(fdcu, default) 
-S3method(fdcu, zoo) 
+#S3method(fdcu, zoo) 
 S3method(fdcu, data.frame) 
 S3method(fdcu, matrix)
 #S3method(hydrokrige, data.frame) 
