new S3Methods: daily2weekly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,10 @@ S3method(daily2monthly, default)
 S3method(daily2monthly, zoo)
 S3method(daily2monthly, data.frame) 
 S3method(daily2monthly, matrix) 
+S3method(daily2weekly, default)
+S3method(daily2weekly, zoo)
+S3method(daily2weekly, data.frame) 
+S3method(daily2weekly, matrix) 
 S3method(dm2seasonal, default)
 S3method(dm2seasonal, zoo)
 S3method(dm2seasonal, data.frame) 
