--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,10 @@ S3method(subdaily2daily, default)
 S3method(subdaily2daily, zoo)
 S3method(subdaily2daily, data.frame)
 S3method(subdaily2daily, matrix)
+S3method(subdaily2weekly, default)
+S3method(subdaily2weekly, zoo)
+S3method(subdaily2weekly, data.frame)
+S3method(subdaily2weekly, matrix)
 S3method(subdaily2monthly, default)
 S3method(subdaily2monthly, zoo)
 S3method(subdaily2monthly, data.frame)
