added imports for 'lattice' and 'grid' (commented right now), just in case the 'calendarHeat' function be used in the final release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,10 @@ importFrom("zoo", is.zoo, as.Date, as.zoo, zoo, coredata, as.yearmon, rollapply,
 importFrom("xts", is.xts, as.xts, to.period, axTicksByTime, apply.daily, periodicity, xts, .index)
 #importFrom("zoo", aggregate) # aggregate is not exported from zoo
 importFrom("e1071", skewness, kurtosis)
-importFrom("lattice", levelplot)
+importFrom("lattice", levelplot,
+#lattice.options, lattice.getOption, trellis.currentLayout, trellis.focus, trellis.unfocus, trellis.panelArgs
+)
+#importFrom("grid", grid.lines, gpar)
 
 #importFrom("maptools", readShapePoly)
 #importFrom("gstat", krige, idw)
