--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,9 +27,7 @@ S3method(annualfunction, default)
 S3method(annualfunction, matrix)
 S3method(annualfunction, zoo)
 S3method(baseflow, zoo)
-S3method(calendarHeatmap, zoo)q()
-n
-
+S3method(calendarHeatmap, zoo)
 S3method(cmv, default)
 S3method(cmv, default)
 S3method(cmv, zoo) 
