updated version number and release date

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,4 @@ BugReports: https://github.com/hzambran/hydroTSM/issues
 LazyLoad: yes
 NeedsCompilation: no
 Repository: CRAN
-Packaged: Thu 30 Nov 2023 09:55:15 AM -03 ; hzambran
+Packaged: Thu 30 Nov 2023 20:45:15 PM -03 ; hzambran
