'rmarkdown' added to 'Suggest' to allow the creation of the vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: S3 functions for management, analysis, interpolation and plotting o
 License: GPL (>=2)
 Depends: R (>= 3.5.0), zoo (>= 1.7-2)
 Imports: xts (>= 0.9-7), e1071, stats, utils, methods, graphics, grDevices, lattice, classInt
-Suggests: knitr
+Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 URL: https://github.com/hzambran/hydroTSM
 MailingList: https://stat.ethz.ch/mailman/listinfo/r-sig-ecology
