added tinitex@v2 to github actions, to solve a problem related to 'pandoc' not found

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -47,3 +47,5 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
+
+      - uses: r-lib/actions/setup-tinytex@v2
