--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,5 @@
 title: hydroTSM
-url: https://github.com/hzambran/hydroTSM
+url: https://hzambran.github.io/hydroTSM/
 template:
   params:
     bootswatch: darkly
