new function: 'isComplete', taken and slightly adapted from the 'hydroRTS' R pacakge

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ S3method(infillxy, matrix)
 S3method(istdx, data.frame) 
 S3method(istdx, default)
 S3method(istdx, matrix)
+S3method(isComplete, zoo)
 S3method(izoo2rzoo, default) 
 S3method(izoo2rzoo, zoo) 
 S3method(ma, default) 
